<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bookmarkButton"
        android:gravity="center"
        app:layout_constraintVertical_weight="0.5"
        android:text="@string/text_button_start" />

    <Button
        android:id="@+id/bookmarkButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_action_bookmarks"
        app:layout_constraintBottom_toTopOf="@+id/statisticsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:layout_constraintVertical_weight="0.5" />

    <TextView
        android:id="@+id/statisticsTextView"
        android:layout_width="0dp"
        android:layout_height="172dp"
        android:gravity="center"
        android:text="@string/text_button_statistics"
        app:layout_constraintBottom_toTopOf="@+id/statisticsContentConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookmarkButton"
        app:layout_constraintVertical_weight="1" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/statisticsContentConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/statisticsTextView"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/booksTranslatedTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/booksTranslatedValueTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/timeElapsedTextView"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:gravity="center"
            android:text="@string/text_button_booksTranslated" />
        <TextView
            android:id="@+id/booksTranslatedValueTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/timeElapsedValueTextView"
            app:layout_constraintStart_toEndOf="@+id/booksTranslatedTextView"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            android:gravity="center"
            android:text="100" />


             <TextView
            android:id="@+id/timeElapsedTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/booksTranslatedTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timeElapsedValueTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            android:gravity="center"
            android:text="@string/text_button_timeElapsed"
            tools:layout_editor_absoluteX="-74dp" />

          <TextView
              android:id="@+id/timeElapsedValueTextView"
              android:layout_width="0dp"
              android:layout_height="0dp"
              app:layout_constraintStart_toEndOf="@+id/timeElapsedTextView"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/booksTranslatedValueTextView"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintVertical_weight="1"
              app:layout_constraintHorizontal_weight="1"
              android:text="1455 minutes"
              android:gravity="center" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>